Fix What's New promo centering

The promo wasn't centered because the header needs to take the whole
width whereas the promo has a smaller width.
Putting the promo in its own section allows the view controller to
SectionInset for this section, allowing the promo to be centered.

Bug: 751402
Change-Id: I1947deee9e2304174731b933ea3e79bfd094d014
Reviewed-on: https://chromium-review.googlesource.com/600187
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492025}