ios/chrome/browser/content_suggestions/content_suggestions_mediator.mm
@@ -70,6 +70,9 @@ const NSInteger kMaxNumMostVisitedTiles = 8;
 // Section Info for the logo and omnibox section.
 @property(nonatomic, strong)
     ContentSuggestionsSectionInformation* logoSectionInfo;
+// Section Info for the What's New promo section.
+@property(nonatomic, strong)
+    ContentSuggestionsSectionInformation* promoSectionInfo;
 // Section Info for the Most Visited section.
 @property(nonatomic, strong)
     ContentSuggestionsSectionInformation* mostVisitedSectionInfo;
@@ -99,6 +102,7 @@ const NSInteger kMaxNumMostVisitedTiles = 8;
 @synthesize mostVisitedItems = _mostVisitedItems;
 @synthesize freshMostVisitedItems = _freshMostVisitedItems;
 @synthesize logoSectionInfo = _logoSectionInfo;
+@synthesize promoSectionInfo = _promoSectionInfo;
 @synthesize mostVisitedSectionInfo = _mostVisitedSectionInfo;
 @synthesize learnMoreSectionInfo = _learnMoreSectionInfo;
 @synthesize recordedPageImpression = _recordedPageImpression;
@@ -130,6 +134,7 @@ initWithContentService:(ntp_snippets::ContentSuggestionsService*)contentService
                 largeIconCache:largeIconCache];
 
     _logoSectionInfo = LogoSectionInformation();
+    _promoSectionInfo = PromoSectionInformation();
     _mostVisitedSectionInfo = MostVisitedSectionInformation();
     _learnMoreSectionInfo = LearnMoreSectionInformation();
 
@@ -175,6 +180,10 @@ initWithContentService:(ntp_snippets::ContentSuggestionsService*)contentService
 
   [sectionsInfo addObject:self.logoSectionInfo];
 
+  if (_notificationPromo->CanShow()) {
+    [sectionsInfo addObject:self.promoSectionInfo];
+  }
+
   if (self.mostVisitedItems.count > 0) {
     [sectionsInfo addObject:self.mostVisitedSectionInfo];
   }
@@ -202,6 +211,8 @@ initWithContentService:(ntp_snippets::ContentSuggestionsService*)contentService
       [NSMutableArray array];
 
   if (sectionInfo == self.logoSectionInfo) {
+    // Section empty on purpose.
+  } else if (sectionInfo == self.promoSectionInfo) {
     if (_notificationPromo->CanShow()) {
       ContentSuggestionsWhatsNewItem* item =
           [[ContentSuggestionsWhatsNewItem alloc] initWithType:0];
