ios/chrome/browser/content_suggestions/mediator_util.h
@@ -59,6 +59,9 @@ ntp_snippets::ContentSuggestion::ID SuggestionIDForSectionID(
 // omnibox.
 ContentSuggestionsSectionInformation* LogoSectionInformation();
 
+// Creates and returns a SectionInfo for the What's New promo section.
+ContentSuggestionsSectionInformation* PromoSectionInformation();
+
 // Creates and returns a SectionInfo for the Most Visited section.
 ContentSuggestionsSectionInformation* MostVisitedSectionInformation();
 
