ios/chrome/browser/ui/content_suggestions/cells/content_suggestions_whats_new_item.mm
@@ -17,12 +17,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace {
 
-const CGFloat kLabelMargin = 16;
+const CGFloat kLabelMargin = 14;
 const CGFloat kLabelLineSpacing = 4;
 const CGFloat kLabelIconMargin = 8;
 const CGFloat kLabelFontSize = 14;
 const CGFloat kIconSize = 24;
-const CGFloat kIconTopMargin = 12;
+const CGFloat kIconTopMargin = 10;
 
 const int kTextColorRGB = 0x333333;
 const int kLinkColorRGB = 0x5595FE;
