ios/chrome/browser/ui/content_suggestions/content_suggestions_collection_updater.mm
@@ -57,6 +57,7 @@ typedef NS_ENUM(NSInteger, SectionIdentifier) {
   SectionIdentifierReadingList,
   SectionIdentifierMostVisited,
   SectionIdentifierLogo,
+  SectionIdentifierPromo,
   SectionIdentifierLearnMore,
   SectionIdentifierDefault,
 };
@@ -90,11 +91,12 @@ ItemType ItemTypeForInfo(ContentSuggestionsSectionInformation* info) {
       return ItemTypeReadingList;
     case ContentSuggestionsSectionMostVisited:
       return ItemTypeMostVisited;
-    case ContentSuggestionsSectionLogo:
+    case ContentSuggestionsSectionPromo:
       return ItemTypePromo;
     case ContentSuggestionsSectionLearnMore:
       return ItemTypeLearnMore;
 
+    case ContentSuggestionsSectionLogo:
     case ContentSuggestionsSectionUnknown:
       return ItemTypeUnknown;
   }
@@ -112,6 +114,8 @@ SectionIdentifier SectionIdentifierForInfo(
       return SectionIdentifierMostVisited;
     case ContentSuggestionsSectionLogo:
       return SectionIdentifierLogo;
+    case ContentSuggestionsSectionPromo:
+      return SectionIdentifierPromo;
     case ContentSuggestionsSectionLearnMore:
       return SectionIdentifierLearnMore;
 
@@ -446,6 +450,11 @@ addSuggestionsToModel:(NSArray<CSCollectionViewItem*>*)suggestions
 - (BOOL)isHeaderSection:(NSInteger)section {
   return [self.collectionViewController.collectionViewModel
              sectionIdentifierForSection:section] == SectionIdentifierLogo;
+}
+
+- (BOOL)isPromoSection:(NSInteger)section {
+  return [self.collectionViewController.collectionViewModel
+             sectionIdentifierForSection:section] == SectionIdentifierPromo;
 }
 
 - (void)updateMostVisitedForSize:(CGSize)size {
