ios/showcase/content_suggestions/sc_content_suggestions_data_source.mm
@@ -112,9 +112,6 @@ using CSCollectionViewItem = CollectionViewItem<SuggestedContent>;
       }
       return items;
     }
-    case ContentSuggestionsSectionLogo: {
-      return @[];
-    }
     case ContentSuggestionsSectionLearnMore: {
       ContentSuggestionsLearnMoreItem* learnMore =
           [[ContentSuggestionsLearnMoreItem alloc] init];
@@ -123,6 +120,8 @@ using CSCollectionViewItem = CollectionViewItem<SuggestedContent>;
       learnMore.suggestionIdentifier.sectionInfo = self.learnMoreSection;
       return @[ learnMore ];
     }
+    case ContentSuggestionsSectionLogo:
+    case ContentSuggestionsSectionPromo:
     case ContentSuggestionsSectionUnknown:
       return @[];
   }
